Anonymous | Login | 2019-02-19 20:25 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0030480 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-02-06 20:23 | 2019-02-10 19:36 | ||||||||
Reporter | nds | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | trivial | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 6.9.0 | ||||||||||||
Target Version | [OCCT] 7.4.0* | Fixed in Version | |||||||||||
Summary | 0030480: Visualization - Clear of Select3D_SensitiveGroup does not update internal container | ||||||||||||
Description | Containers myBVHPrimIndexes and myEntities are used in Select3D_SensitiveGroup in a pair. In method Clear(), container myEntities is free, but myBVHPrimIndexes is not, but should be. As a result we have wrong number of virtual method Size(). The problem is reproduced on PMIVis presentations and sometimes leads to crash during internal selection build as myEntities are requested by index of myBVHPrimIndexes that exceeds bounds of myEntities container. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not needed | ||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0082055) git (administrator) 2019-02-06 20:28 |
Branch CR30480 has been created by nds. SHA-1: 8113d549d5a733cf73d97e60dc761271378e52e7 Detailed log of new commits: Author: nds Date: Wed Feb 6 20:20:47 2019 +0300 0030480: Visualization - Clear of Select3D_SensitiveGroup does not update internal container |
(0082056) nds (developer) 2019-02-06 20:30 |
Dear Kirill could you please review. |
(0082057) kgv (developer) 2019-02-06 20:42 |
Please raise the patch. |
(0082078) bugmaster (administrator) 2019-02-08 10:05 |
tested in framework of WREEK-6 branch Combination - OCCT branch : WEEK-6 SHA - a7ced2a456dce4c99f7ad92b28923fb7ca75e5c3 Products branch : WEEK-6 SHA - 9aa25f353abc3855a46a51135af99c115d17b709 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16398.100000000006 / 16363.790000000015 [+0.21%] Products Total CPU difference: 768.9699999999888 / 769.5799999999863 [-0.08%] Windows-64-VC14: OCCT Total CPU difference: 17772.359375 / 17773.921875 [-0.01%] Products Total CPU difference: 8601.046875 / 8604.828125 [-0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
![]() |
|||
occt: master a7ced2a4
Timestamp: 2019-02-06 17:20:47 Author: nds Committer: bugmaster [ Details ] [ Diff ] |
0030480: Visualization - Clear of Select3D_SensitiveGroup does not update internal container | ||
mod - src/Select3D/Select3D_SensitiveGroup.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-02-06 20:23 | nds | New Issue | |
2019-02-06 20:23 | nds | Assigned To | => kgv |
2019-02-06 20:23 | nds | Assigned To | kgv => nds |
2019-02-06 20:28 | git | Note Added: 0082055 | |
2019-02-06 20:30 | nds | Note Added: 0082056 | |
2019-02-06 20:30 | nds | Assigned To | nds => kgv |
2019-02-06 20:30 | nds | Status | new => resolved |
2019-02-06 20:42 | kgv | Note Added: 0082057 | |
2019-02-06 20:42 | kgv | Assigned To | kgv => bugmaster |
2019-02-06 20:42 | kgv | Severity | minor => trivial |
2019-02-06 20:42 | kgv | Status | resolved => reviewed |
2019-02-06 20:43 | kgv | Relationship added | child of 0024623 |
2019-02-06 20:43 | kgv | Product Version | => 6.9.0 |
2019-02-07 11:07 | bugmaster | Test case number | => Not needed |
2019-02-08 10:05 | bugmaster | Note Added: 0082078 | |
2019-02-08 10:05 | bugmaster | Status | reviewed => tested |
2019-02-10 19:36 | bugmaster | Changeset attached | => occt master a7ced2a4 |
2019-02-10 19:36 | bugmaster | Status | tested => verified |
2019-02-10 19:36 | bugmaster | Resolution | open => fixed |
Copyright © 2000 - 2019 MantisBT Team |