0030480: Visualization - Clear of Select3D_SensitiveGroup does not update internal container